Add application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=SB-GraphQL-Federated-Clients
+spring.graphql.graphiql.path=/graphiql
+spring.graphql.graphiql.enabled=true
+server.port=8081
+
+# For Postgres Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.jpa.properties.hibernate.default_schema=dgs-accounts
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+# Create: This option drops the existing schema and creates a new one every time the application starts.
+# It ensures that you start with a clean database, but any existing data will be lost.
+spring.jpa.hibernate.ddl-auto=create
+
+logging.level.root=INFO
